fix notebook panel note count label text align

--- a/src/chrome.css
+++ b/src/chrome.css
@@ -1293,6 +1293,7 @@ body {
   right: 0;
   margin: 0 3px 0 10px;
   padding: 0 6px !important;
+  line-height: 13px;
   min-height: 15px;
   max-height: 15px;
   font-size: 10px;
